--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.13.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.13.1'
+    implementation 'com.google.android.exoplayer:extension-mediasession:2.13.1'
     implementation "androidx.media:media:1.2.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
