--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.kotlin_demo">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,9 +23,9 @@
             </intent-filter>
         </activity>
         <service android:name=".AudioPlayer"/>
-        <service android:name=".MediaPlaybackServiceTest">
+        <service android:name=".AudioService2">
             <intent-filter>
-                <action android:name="android.media.browse.MediaBrowserService" />
+                <action android:name="android.media.browse.AudioSerice2" />
             </intent-filter>
         </service>
     </application>
