Added media button receiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,12 +22,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".AudioPlayer"/>
+<!--        <service android:name=".AudioPlayer"/>-->
         <service android:name=".AudioService2">
             <intent-filter>
                 <action android:name="android.media.browse.AudioSerice2" />
             </intent-filter>
         </service>
+        <receiver android:name="androidx.media.session.MediaButtonReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
